src/Pages/Metrics/styles/index.module.scss
.metrics-container {
	max-width: 500px;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	width: 100%;
	margin: auto;

	@media (min-width: 800px) {
		zoom: 1.2;
	}

	.chart {
		width: 100%;

		&>canvas {
			height: 25vh !important;
		}
	}

	.icon_pub {
		&>div>svg>g>g>g>path {
			fill: #a012c7 !important;
		}
	}

	.arrows {
		padding: 1.5px !important;
		display: flex;
		justify-content: center;
		margin: auto;

		&>div {
			width: 17px;
			display: flex;
			justify-content: center;
			margin: auto;
		}

		&>div:nth-child(1) {
			&>svg {
				width: 8px;
				height: auto;
			}
		}

		&>div:nth-child(3) {
			&>svg {
				width: 8px;
				height: auto;
				transform: rotate(180deg);
			}
		}

		&>div:nth-child(2) {
			&>svg {
				height: 25px;
			}
		}
	}

	.section {

		.separator {
			margin-block-start: 3px;
			background: linear-gradient(60deg, #ff7700 0%, #c740c7 100%);
			height: 2px;
			display: block;
		}

		width: 100%;

		.sub-title {
			margin-block: 5px;
			font-size: 16px;
		}

		.column-flex {
			display: flex;
			flex-direction: column;
			gap: 2px;

			.event-item {
				display: flex;
				justify-content: space-between;
				border: 1px solid #383838;
				border-radius: 5px;
				padding: 7px 12px;

				span {
					display: flex;
					gap: 5px;
					align-items: center;
					font-size: 12px;
				}

				.date {
					color: #8c8c8c;
				}
			}
		}

		.cards-container {
			display: grid;
			grid-template-columns: 1fr 1fr;
			gap: 6px;

			.flx-column {
				display: flex;
				flex-direction: column;
				gap: 5px;
			}

			.flex-row {
				display: flex;
				flex-direction: row;
				justify-content: center;
				gap: 15px;
				margin: auto;
			}

			.text-right {
				text-align: right;
			}

			.card {
				padding: 7px;
				border-radius: 5px;
				display: flex;
				flex-direction: column;
				gap: 5px;
				border-width: 1.7px;
				border-style: solid;

				.top {
					display: flex;
					justify-content: space-between;

					.card-label {
						font-size: 15px;
						margin-block: 0;
					}

					.number {
						font-size: 12px;
						font-weight: 500;
						color: #8c8c8c;
					}

					.price {
						font-size: 12px;
						font-weight: 500;
						color: #ffffff;

						& svg {
							width: 16px !important;
							height: auto !important;
						}
					}
				}

				.bot {
					&.channels-grid {
						padding: 0;
						display: grid;
						grid-template-columns: auto auto;
						gap: 6px;

						.channel {
							font-size: 12px;
							display: flex;
							justify-content: center;
							align-items: center;

							@media (max-width: 425px) {
								font-size: 11px;
								justify-content: flex-start;
								// margin-left: 10%;
							}

							.dot {
								height: 8px;
								width: 8px;

								border-radius: 50%;
								margin-right: 6px;
								justify-self: flex-start;

								@media (max-width: 425px) {
									margin: 0 !important;
									margin: 0 5px !important;
								}
							}

							&:first-of-type {
								.dot {
									background-color: #00ff1e;
								}
							}

							&:nth-of-type(2) {
								.dot {
									background-color: #dadada;
								}
							}

							&:nth-of-type(3) {
								.dot {
									background-color: #f59322;
								}
							}

							&:last-of-type {
								.dot {
									margin-left: -5px;
									background-color: #d90000;
								}
							}

						}
					}

					&.top-channels {
						display: flex;
						flex-direction: column;
						align-items: center;
						justify-content: center;

						.row {
							display: flex;
							justify-content: center;
							align-items: center;
							font-size: 12px;

							.label {
								color: #8c8c8c;
							}

						}
					}




				}

				&.net {
					border-color: #43b960;
				}

				&.channels {
					border-color: #a012c7;
				}

				&.top-channels {
					border-color: #baba06;
				}

				&.routing {
					border-color: #f59322;
				}
			}
		}

		.between {
			display: flex;
			justify-content: space-between;
			align-items: center;
		}

		.center {
			display: flex;
			justify-content: center;
			align-items: center;
			gap: 5px;
			min-width: 8rem;
		}

		.box {
			border: 1px solid #2a3035;
			border-radius: 5px;
			box-shadow: 0px 0px 2px rgba(0, 0, 0, 1);
			padding: 1px;
			font-size: 15px;
		}

		.border {
			position: relative;
			padding: 7px;
			padding-inline: 25px;

			&::before {
				content: '';
				position: absolute;
				top: 0;
				left: 0;
				right: 0;
				bottom: 0;
				background: linear-gradient(60deg, #ff7700 0%, #c740c7 100%);
				z-index: -1;
				border-radius: 5px;
			}

			&::after {

				content: '';
				position: absolute;
				top: 1px;
				/* Adjust the value to match the desired border width */
				left: 1px;
				right: 1px;
				bottom: 1px;
				background: #16191c;
				z-index: -1;
				border-radius: 4px;
			}
		}
	}

}

.column {
	margin-block-start: 30px;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: center;
	width: 100%;
	gap: 8px;

	.input-container {
		display: flex;
		justify-content: space-between;
		width: 100%;

		label {
			font-size: 16px;
		}

		input {
			width: 70%;
			outline: 0;
			font-family: Montserrat;
			font-size: 17px;
			text-align: start;
			background-color: transparent;
			color: #a3a3a3;
			box-shadow: rgb(0, 0, 0) 0px 0px 2px 0px;
			padding: 0 10px;
			border: 1px solid #2cb0e9;
			border-radius: 5px;
		}
	}

	button {
		margin-block: 20px;
		max-width: 160px;
		width: 140px;
		display: inline-flex;
		justify-content: center;
		align-items: center;
		position: relative;
		box-sizing: border-box;
		font-size: 22px;
		font-family: Montserrat;
		font-weight: bold;
		padding: 6px 15px;
		$border: 1px;
		color: #FFF;
		background: #16191c;
		background-clip: padding-box;
		/* !importanté */
		border: solid $border transparent;
		/* !importanté */
		border-radius: 5px;
		cursor: pointer;

		&:before {
			content: '';
			position: absolute;
			top: 0;
			right: 0;
			bottom: 0;
			left: 0;
			z-index: -1;
			margin: -$border;
			/* !importanté */
			border-radius: 3px;
			/* !importanté */
			background: linear-gradient(150deg, #29ABE2, #B0B0B0);
		}
	}

}

